fixed extra space on right side of website

--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,11 @@
 }
 
 body, html{
+  width: 100%;
   height:100%;
-  margin:0;
+  margin:0px;
+  padding:0px;
+  overflow-x: hidden;
   font-size:20px;
   font-family:PHR;
   font-weight:400;
